Change firm name and change phone number

--- a/views/company/history.html
+++ b/views/company/history.html
@@ -6,11 +6,11 @@
 
     <h1 class="margin--bottom">История Компании</h1>
 
-    <p>История ИНКОМ-Недвижимость берет свое начало в 1991 году, когда были основаны агентства недвижимости ИНКОМ и МЦБН, быстро вошедшие в число лидеров риэлторского рынка московского региона. В 2001 году паритетное объединение двух компаний привело к созданию крупнейшего игрока отечественного рынка недвижимости — ИНКОМ-Недвижимость, которая оказывает сегодня своим клиентам полный спектр риэлторских услуг высочайшего качества.</p>
-    <p>В первые же годы своей деятельности компания достигла значительных результатов в динамике развития благодаря проведению эффективной маркетинговой политики. Уже к 2006 году ИНКОМ-Недвижимость добилась значительного отрыва от конкурентов по такому ключевому показателю, как занимаемая доля рынка. В 2007 году в самостоятельный бренд было выделено подразделение элитной недвижимости — Villagio Estate.</p>
-    <p>На сегодняшний день одним из приоритетов в развитии компании является открытие новых офисов практически в каждом районе столицы с целью обеспечения максимальной клиентоориентированности. В настоящее время ИНКОМ-Недвижимость располагает широкой сетью представительств в Москве и Подмосковье, которая насчитывает несколько десятков территориальных офисов. Количество осуществленных операций с недвижимостью исчисляется сотнями тысяч. С каждым годом растет и численность сотрудников.</p>
-    <p>Тот факт, что ИНКОМ-Недвижимость продолжает динамично развиваться и успешно отвечает на вызовы времени, свидетельствует о правильности выбора стратегического курса. Сегодня ИНКОМ-Недвижимость является современной, высокотехнологичной, открытой к инновациям компанией, по праву занимающей позицию лидера отрасли и уверенно смотрящей в будущее.</p>
-    <p>ИНКОМ-Недвижимость является постоянным членом профессиональных объединений, таких как Российская Гильдия Риэлторов и Московская Ассоциация Риэлторов. Согласно рейтингам журналов Forbes и «Финанс», она является одной из крупнейших частных компаний России, представленных на рынке отечественной недвижимости. Ее деятельность регулярно отмечается профессиональными и общественными наградами. Так, ИНКОМ-Недвижимость стала первым представителем рынка недвижимости, получившим по результатам национального голосования почетный статус «Народная Марка/Марка № 1 в России». А в январе 2014 года в мировом отчете по проблемам репутационного менеджмента, который выпустила авторитетная компания Synovate Comcon, входящая в международную исследовательскую сеть Ipsos, ИНКОМ-Недвижимость была признана одной из лучших российских компаний с наиболее надежной корпоративной репутацией.</p>
+    <p>История ЗемНедвижимость берет свое начало в 1991 году, когда были основаны агентства недвижимости ЗемНедвижимость и МЦБН, быстро вошедшие в число лидеров риэлторского рынка московского региона. В 2001 году паритетное объединение двух компаний привело к созданию крупнейшего игрока отечественного рынка недвижимости — ЗемНедвижимость, которая оказывает сегодня своим клиентам полный спектр риэлторских услуг высочайшего качества.</p>
+    <p>В первые же годы своей деятельности компания достигла значительных результатов в динамике развития благодаря проведению эффективной маркетинговой политики. Уже к 2006 году ЗемНедвижимость добилась значительного отрыва от конкурентов по такому ключевому показателю, как занимаемая доля рынка. В 2007 году в самостоятельный бренд было выделено подразделение элитной недвижимости — Villagio Estate.</p>
+    <p>На сегодняшний день одним из приоритетов в развитии компании является открытие новых офисов практически в каждом районе столицы с целью обеспечения максимальной клиентоориентированности. В настоящее время ЗемНедвижимость располагает широкой сетью представительств в Москве и Подмосковье, которая насчитывает несколько десятков территориальных офисов. Количество осуществленных операций с недвижимостью исчисляется сотнями тысяч. С каждым годом растет и численность сотрудников.</p>
+    <p>Тот факт, что ЗемНедвижимость продолжает динамично развиваться и успешно отвечает на вызовы времени, свидетельствует о правильности выбора стратегического курса. Сегодня ЗемНедвижимость является современной, высокотехнологичной, открытой к инновациям компанией, по праву занимающей позицию лидера отрасли и уверенно смотрящей в будущее.</p>
+    <p>ЗемНедвижимость является постоянным членом профессиональных объединений, таких как Российская Гильдия Риэлторов и Московская Ассоциация Риэлторов. Согласно рейтингам журналов Forbes и «Финанс», она является одной из крупнейших частных компаний России, представленных на рынке отечественной недвижимости. Ее деятельность регулярно отмечается профессиональными и общественными наградами. Так, ЗемНедвижимость стала первым представителем рынка недвижимости, получившим по результатам национального голосования почетный статус «Народная Марка/Марка № 1 в России». А в январе 2014 года в мировом отчете по проблемам репутационного менеджмента, который выпустила авторитетная компания Synovate Comcon, входящая в международную исследовательскую сеть Ipsos, ЗемНедвижимость была признана одной из лучших российских компаний с наиболее надежной корпоративной репутацией.</p>
 
     <div class="timeline">
         <div class="timeline__group">
@@ -18,26 +18,26 @@
 
             <div class="timeline__item">
                 <div class="timeline__content">
-                    <p class="title">«ИНКОМ-Недвижимость» признана лучшей риэлторской компанией</p>
-                    <p>«ИНКОМ-Недвижимость» стала победителем V конкурса «Московские звезды», а также получила награду PRO Realty как лучшее агентство.</p>
+                    <p class="title">«ЗемНедвижимость» признана лучшей риэлторской компанией</p>
+                    <p>«ЗемНедвижимость» стала победителем V конкурса «Московские звезды», а также получила награду PRO Realty как лучшее агентство.</p>
                 </div>
             </div>
             <div class="timeline__item">
                 <div class="timeline__content">
-                    <p class="title">«ИНКОМ-Недвижимость» признана лучшей риэлторской компанией</p>
-                    <p>«ИНКОМ-Недвижимость» стала победителем V конкурса «Московские звезды», а также получила награду PRO Realty как лучшее агентство.</p>
+                    <p class="title">«ЗемНедвижимость» признана лучшей риэлторской компанией</p>
+                    <p>«ЗемНедвижимость» стала победителем V конкурса «Московские звезды», а также получила награду PRO Realty как лучшее агентство.</p>
                 </div>
             </div>
             <div class="timeline__item">
                 <div class="timeline__content">
-                    <p class="title">«ИНКОМ-Недвижимость» признана лучшей риэлторской компанией</p>
-                    <p>«ИНКОМ-Недвижимость» стала победителем V конкурса «Московские звезды», а также получила награду PRO Realty как лучшее агентство.</p>
+                    <p class="title">«ЗемНедвижимость» признана лучшей риэлторской компанией</p>
+                    <p>«ЗемНедвижимость» стала победителем V конкурса «Московские звезды», а также получила награду PRO Realty как лучшее агентство.</p>
                 </div>
             </div>
             <div class="timeline__item">
                 <div class="timeline__content">
-                    <p class="title">«ИНКОМ-Недвижимость» признана лучшей риэлторской компанией</p>
-                    <p>«ИНКОМ-Недвижимость» стала победителем V конкурса «Московские звезды», а также получила награду PRO Realty как лучшее агентство.</p>
+                    <p class="title">«ЗемНедвижимость» признана лучшей риэлторской компанией</p>
+                    <p>«ЗемНедвижимость» стала победителем V конкурса «Московские звезды», а также получила награду PRO Realty как лучшее агентство.</p>
                 </div>
             </div>
 
@@ -45,31 +45,31 @@
 
             <div class="timeline__item">
                 <div class="timeline__content">
-                    <p class="title">«ИНКОМ-Недвижимость» признана лучшей риэлторской компанией</p>
-                    <p>«ИНКОМ-Недвижимость» стала победителем V конкурса «Московские звезды», а также получила награду PRO Realty как лучшее агентство.</p>
+                    <p class="title">«ЗемНедвижимость» признана лучшей риэлторской компанией</p>
+                    <p>«ЗемНедвижимость» стала победителем V конкурса «Московские звезды», а также получила награду PRO Realty как лучшее агентство.</p>
                 </div>
             </div>
             <div class="timeline__item">
                 <div class="timeline__content">
-                    <p class="title">«ИНКОМ-Недвижимость» признана лучшей риэлторской компанией</p>
-                    <p>«ИНКОМ-Недвижимость» стала победителем V конкурса «Московские звезды», а также получила награду PRO Realty как лучшее агентство.</p>
+                    <p class="title">«ЗемНедвижимость» признана лучшей риэлторской компанией</p>
+                    <p>«ЗемНедвижимость» стала победителем V конкурса «Московские звезды», а также получила награду PRO Realty как лучшее агентство.</p>
                 </div>
             </div>
             <div class="timeline__item">
                 <div class="timeline__content">
-                    <p class="title">«ИНКОМ-Недвижимость» признана лучшей риэлторской компанией</p>
-                    <p>«ИНКОМ-Недвижимость» стала победителем V конкурса «Московские звезды», а также получила награду PRO Realty как лучшее агентство.</p>
+                    <p class="title">«ЗемНедвижимость» признана лучшей риэлторской компанией</p>
+                    <p>«ЗемНедвижимость» стала победителем V конкурса «Московские звезды», а также получила награду PRO Realty как лучшее агентство.</p>
                 </div>
             </div>
             <div class="timeline__item">
                 <div class="timeline__content">
-                    <p class="title">«ИНКОМ-Недвижимость» признана лучшей риэлторской компанией</p>
-                    <p>«ИНКОМ-Недвижимость» стала победителем V конкурса «Московские звезды», а также получила награду PRO Realty как лучшее агентство.</p>
+                    <p class="title">«ЗемНедвижимость» признана лучшей риэлторской компанией</p>
+                    <p>«ЗемНедвижимость» стала победителем V конкурса «Московские звезды», а также получила награду PRO Realty как лучшее агентство.</p>
                 </div>
             </div>
 
             <div class="timeline__base">
-                Основание Компании <br>«ИНКОМ-Недвижимость»
+                Основание Компании <br>«ЗемНедвижимость»
             </div>
 
         </div>
