--- a/views/company/review.html
+++ b/views/company/review.html
@@ -56,26 +56,26 @@
 
             <div class="timeline__item">
                 <div class="timeline__content">
-                    <p class="title">«ИНКОМ-Недвижимость» признана лучшей риэлторской компанией</p>
-                    <p>«ИНКОМ-Недвижимость» стала победителем V конкурса «Московские звезды», а также получила награду PRO Realty как лучшее агентство.</p>
+                    <p class="title">«ЗемНедвижимость» признана лучшей риэлторской компанией</p>
+                    <p>«ЗемНедвижимость» стала победителем V конкурса «Московские звезды», а также получила награду PRO Realty как лучшее агентство.</p>
                 </div>
             </div>
             <div class="timeline__item">
                 <div class="timeline__content">
-                    <p class="title">«ИНКОМ-Недвижимость» признана лучшей риэлторской компанией</p>
-                    <p>«ИНКОМ-Недвижимость» стала победителем V конкурса «Московские звезды», а также получила награду PRO Realty как лучшее агентство.</p>
+                    <p class="title">«ЗемНедвижимость» признана лучшей риэлторской компанией</p>
+                    <p>«ЗемНедвижимость» стала победителем V конкурса «Московские звезды», а также получила награду PRO Realty как лучшее агентство.</p>
                 </div>
             </div>
             <div class="timeline__item">
                 <div class="timeline__content">
-                    <p class="title">«ИНКОМ-Недвижимость» признана лучшей риэлторской компанией</p>
-                    <p>«ИНКОМ-Недвижимость» стала победителем V конкурса «Московские звезды», а также получила награду PRO Realty как лучшее агентство.</p>
+                    <p class="title">«ЗемНедвижимость» признана лучшей риэлторской компанией</p>
+                    <p>«ЗемНедвижимость» стала победителем V конкурса «Московские звезды», а также получила награду PRO Realty как лучшее агентство.</p>
                 </div>
             </div>
             <div class="timeline__item">
                 <div class="timeline__content">
-                    <p class="title">«ИНКОМ-Недвижимость» признана лучшей риэлторской компанией</p>
-                    <p>«ИНКОМ-Недвижимость» стала победителем V конкурса «Московские звезды», а также получила награду PRO Realty как лучшее агентство.</p>
+                    <p class="title">«ЗемНедвижимость» признана лучшей риэлторской компанией</p>
+                    <p>«ЗемНедвижимость» стала победителем V конкурса «Московские звезды», а также получила награду PRO Realty как лучшее агентство.</p>
                 </div>
             </div>
 
