--- a/views/home.html
+++ b/views/home.html
@@ -15,8 +15,8 @@
 <div class="container container--center">
 
     <div class="panel panel--box">
-        <h1>Агентство недвижимости ИНКОМ — крупнейшее в Москве</h1>
-        <p>ИНКОМ-Недвижимость — агентство недвижимости, занимающее ведущие позиции на рынке риэлторских услуг. По оценкам экспертов, значительная часть организованных сделок в московском регионе приходится именно на «ИНКОМ», что позволяет нам вот уже многие годы занимать лидирующее место среди агентств недвижимости Москвы и Подмосковья.</p>
+        <h1>Агентство недвижимости ЗемНедвижимость — крупнейшее в Москве</h1>
+        <p>ЗемНедвижимость — агентство недвижимости, занимающее ведущие позиции на рынке риэлторских услуг. По оценкам экспертов, значительная часть организованных сделок в московском регионе приходится именно на «ЗемНедвижимость», что позволяет нам вот уже многие годы занимать лидирующее место среди агентств недвижимости Москвы и Подмосковья.</p>
 
         <ul class="grid text--center list">
             <li class="col--1-5">
@@ -106,7 +106,7 @@
 <div class="container container--center">
     <div class="panel panel--box">
         <h2>Продажа недвижимости в Москве и Подмосковье</h2>
-        <p>Агентство ИНКОМ-Недвижимость уже более 20 лет предоставляет риэлторские услуги юридическим и физическим лицам в ключевых сегментах рынка недвижимости: покупка и продажа квартир на первичном и вторичном рынках городского и загородного жилья, аренда квартир, а также проводим сделки с коммерческой недвижимостью. Жилая и коммерческая недвижимость Москвы и Московской области представлена в нашем каталоге в самом полном объеме, в наличии есть множество вариантов жилья различного типа, предоставляемого как с помощью риэлторов, так и без посредников.</p>
+        <p>Агентство ЗемНедвижимость уже более 20 лет предоставляет риэлторские услуги юридическим и физическим лицам в ключевых сегментах рынка недвижимости: покупка и продажа квартир на первичном и вторичном рынках городского и загородного жилья, аренда квартир, а также проводим сделки с коммерческой недвижимостью. Жилая и коммерческая недвижимость Москвы и Московской области представлена в нашем каталоге в самом полном объеме, в наличии есть множество вариантов жилья различного типа, предоставляемого как с помощью риэлторов, так и без посредников.</p>
         <p>Мы оказываем риэлторские услуги по аренде и продаже недвижимости во всех сегментах. С помощью наших специалистов вы сможете купить элитную недвижимость в Москве и Подмосковье, а также приобрести жилье эконом класса. В нашей базе недвижимости, содержащей огромное количество предложений, найдутся как эксклюзивные квартиры, так и бюджетные варианты, а также большое количество загородного жилья всех категорий. Специалисты нашего агентства помогут в подборе оптимального для вас варианта и оформят сделку по <nobr>купле продаже</nobr> недвижимости максимально надежно и быстро!</p>
 
         <h2>Каталог объектов</h2>
