--- a/views/jobs/success.html
+++ b/views/jobs/success.html
@@ -24,7 +24,7 @@
 
     <h3>Освоить новое дело «с нуля» и сделать блестящую карьеру – это реально!</h3>
 
-    <p>В Компании «ИНКОМ-недвижимость» карьерный рост тщательно продуман, спланирован и подготовлен. Работая упорно и внимательно, вы можете стать не просто специалистом в риэлторском бизнесе, но и опытным управленцем. Ведь что такое карьера? Это продвижение на новые должности в определенной сфере деятельности, изменение навыков, квалификационных возможностей и размеров вознаграждения. Истории наших сотрудников – очевидное тому подтверждение.
+    <p>В Компании «ЗемНедвижимость» карьерный рост тщательно продуман, спланирован и подготовлен. Работая упорно и внимательно, вы можете стать не просто специалистом в риэлторском бизнесе, но и опытным управленцем. Ведь что такое карьера? Это продвижение на новые должности в определенной сфере деятельности, изменение навыков, квалификационных возможностей и размеров вознаграждения. Истории наших сотрудников – очевидное тому подтверждение.
     </p>
 
     <h2 class="margin--top-large">Управление вторичного рынка жилья</h2>
