--- a/views/jobs/training-center.html
+++ b/views/jobs/training-center.html
@@ -7,7 +7,7 @@
     <div class="grid">
         <div class="col--3-4">
             <h1>Учебный центр</h1>
-            <p>Залогом успеха любой компании является профессионализм работы ее сотрудников. Специально созданный Учебный центр Инкома обучает новичков профессии риэлтор, а также помогает сотрудникам повысить свою квалификацию и развить навыки, необходимые для профессионального успеха.</p>
+            <p>Залогом успеха любой компании является профессионализм работы ее сотрудников. Специально созданный Учебный центр ЗемНедвижимостьа обучает новичков профессии риэлтор, а также помогает сотрудникам повысить свою квалификацию и развить навыки, необходимые для профессионального успеха.</p>
 
             <h2 class="text--h3 margin--v">Специализированные учебные программы</h2>
             <p>Специализированные учебные программы разработаны для Управления вторичного рынка, Управления аренды, Департамента загородной недвижимости, Департамента новостроек и других подразделений Компании.</p>
@@ -21,7 +21,7 @@
                 <li><span>Обучение за счет Компании.</span></li>
             </ul>
 
-            <p>Система подготовки всех категорий сотрудников: стажеров, экспертов, начальников отделов, руководителей отделений, которые повышают свою квалификацию в соответствующих краткосрочных и долгосрочных программах. Каждый сотрудник Компании ИНКОМ-Недвижимость имеет право и возможность ежегодно повышать свою квалификацию и развивать профессиональное мастерство!</p>
+            <p>Система подготовки всех категорий сотрудников: стажеров, экспертов, начальников отделов, руководителей отделений, которые повышают свою квалификацию в соответствующих краткосрочных и долгосрочных программах. Каждый сотрудник Компании ЗемНедвижимость имеет право и возможность ежегодно повышать свою квалификацию и развивать профессиональное мастерство!</p>
 
             <h2 class="margin--top-large">Система обучения сотрудников Компании</h2>
             <p>В Компании есть следующие виды обучения:</p>
@@ -33,7 +33,7 @@
             </ul>
 
             <p>Идея подготовки кадров «своими силами» успешно реализуется в Компании на практике: сотни стажеров, освоив курс лекций в Учебном центре, эффективно трудятся в компании, плечом к плечу с бывшими наставниками.</p>
-            <p>Ежегодно в Учебном центре Компании проходят обучение и стажировку более 9000 сотрудников. Именно это позволяет сотрудникам Инкома безошибочно проводить сложные операции на рынке недвижимости и поддерживать высокий имидж Компании.</p>
+            <p>Ежегодно в Учебном центре Компании проходят обучение и стажировку более 9000 сотрудников. Именно это позволяет сотрудникам ЗемНедвижимостьа безошибочно проводить сложные операции на рынке недвижимости и поддерживать высокий имидж Компании.</p>
         </div>
         <div class="col--1-4">
 
