--- a/views/rent-realty/flats.html
+++ b/views/rent-realty/flats.html
@@ -82,8 +82,8 @@
 
             <h2 class="margin--v">Как снять квартиру в Москве без проблем</h2>
             <p>Проблема, как снять желаемую квартиру, перестанет пугать, если к ее решению подключить профессионалов. Выбирая агентство недвижимости, стоит обратить внимание на историю работы и отзывы от клиентов. Несомненно, уровень цены на услуги важен, но еще важнее репутация.</p>
-            <p>Для нашего агентства с <nobr>20-летним</nobr> стажем аренда квартир, как направление деятельности, стало одним из важнейших. Задача сотрудников компании ИНКОМ-Недвижимость — максимально упростить процесс подбора и учесть все пожелания будущего квартиросъемщика. Также мы поможем избежать всех трений и разногласий в будущем, исходящих, как от собственников, так и от временных жильцов.</p>
-            <p>Сегодня совместная работа с агентством ИНКОМ-Недвижимость дает возможность учитывать все требования нанимателя:</p>
+            <p>Для нашего агентства с <nobr>20-летним</nobr> стажем аренда квартир, как направление деятельности, стало одним из важнейших. Задача сотрудников компании ЗемНедвижимость — максимально упростить процесс подбора и учесть все пожелания будущего квартиросъемщика. Также мы поможем избежать всех трений и разногласий в будущем, исходящих, как от собственников, так и от временных жильцов.</p>
+            <p>Сегодня совместная работа с агентством ЗемНедвижимость дает возможность учитывать все требования нанимателя:</p>
 
             <ul class="list list--dashed">
                 <li>желаемые цены и сроки найма;</li>
