--- a/views/sale-realty/flats.html
+++ b/views/sale-realty/flats.html
@@ -140,7 +140,7 @@
                         <i></i>
                     </div>
                     <p>
-                        Рассылка новостей от ИНКОМ-Недвижимость — аналитика рынка, мнения экспертов, мероприятия, акции и спецпредложения.
+                        Рассылка новостей от ЗемНедвижимость — аналитика рынка, мнения экспертов, мероприятия, акции и спецпредложения.
                     </p>
                 </div>
 
@@ -201,11 +201,11 @@
                     <a href="#/" class="button button--medium button--green" title="Предложения квартир в Подмосковье">Предложения квартир в Подмосковье</a>
                 </p>
 
-                <h2>Купить квартиру через ИНКОМ-Недвижимость</h2>
+                <h2>Купить квартиру через ЗемНедвижимость</h2>
                 <p>База квартир и комнат в Москве и Подмосковье состоит более чем из 15 тысяч предложений вторичной недвижимости и новостроек — актуальных и проверенных нашими специалистами.</p>
                 <p>В нашей базе квартир на продажу в Москве и области имеется удобный фильтр, с помощью которого можно отфильтровать жилье по важным для вас критериям и отобрать квартиры с возможностью ипотеки.</p>
 
-                <h2>Преимущества покупки жилья через ИНКОМ-Недвижимость:</h2>
+                <h2>Преимущества покупки жилья через ЗемНедвижимость:</h2>
 
                 <ol class="list list--number">
                     <li><div class="circle">1</div>Консультация с ведущими специалистами по недвижимости</li>
@@ -218,9 +218,9 @@
                 </ol>
             </div>
 
-            <p>Если у вас возникли вопросы, обращайтесь к специалистам ИНКОМ-Недвижимость. Работая с нами, Вы всегда можете рассчитывать на удобные условия сотрудничества, безопасность сделки и внимательное отношение.</p>
+            <p>Если у вас возникли вопросы, обращайтесь к специалистам ЗемНедвижимость. Работая с нами, Вы всегда можете рассчитывать на удобные условия сотрудничества, безопасность сделки и внимательное отношение.</p>
 
-            <h2 class="margin--v">Бесплатные консультации экспертов ИНКОМ-Недвижимость</h2>
+            <h2 class="margin--v">Бесплатные консультации экспертов ЗемНедвижимость</h2>
 
             <div class="panel panel--white panel--box">
                 <ul class="question-board">
