--- a/views/uslugi/pokupka-kvartir-i-komnat.html
+++ b/views/uslugi/pokupka-kvartir-i-komnat.html
@@ -99,7 +99,7 @@
         </div>
     </div>
 
-    <h2 class="margin--top-large text--h3">Бесплатные консультации экспертов ИНКОМ-Недвижимость</h2>
+    <h2 class="margin--top-large text--h3">Бесплатные консультации экспертов ЗемНедвижимость</h2>
     <div class="panel panel--white panel--box">
         <ul class="question-board">
             <li>
