--- a/views/uslugi/programma-loyalnosti.html
+++ b/views/uslugi/programma-loyalnosti.html
@@ -11,11 +11,11 @@
     </div>
 
     <p>Уважаемые клиенты!</p>
-    <p>Приобретая жилую недвижимость в компании ИНКОМ, вы становитесь участником программы «Новосел» и получаете в подарок одноименную дисконтную карту. При покупке товаров для ремонта, отделки и декора предоставляются скидки до 50% в более чем 300 магазинах «Каширского двора».</p>
+    <p>Приобретая жилую недвижимость в компании ЗемНедвижимость, вы становитесь участником программы «Новосел» и получаете в подарок одноименную дисконтную карту. При покупке товаров для ремонта, отделки и декора предоставляются скидки до 50% в более чем 300 магазинах «Каширского двора».</p>
 
     <h2 class="margin--v">Ремонт по разумной цене — это возможно!</h2>
 
-    <p>У клиентов ИНКОМа есть возможность сократить расходы на ремонт приобретенного жилья на сумму от 140 до 350 тысяч рублей. А поможет им в этом дисконтная программа «Новосел» от компании «Каширский двор».</p>
+    <p>У клиентов ЗемНедвижимостьа есть возможность сократить расходы на ремонт приобретенного жилья на сумму от 140 до 350 тысяч рублей. А поможет им в этом дисконтная программа «Новосел» от компании «Каширский двор».</p>
     <p>«Каширский Двор» — это самая известная торговая марка на рынке розничной продажи строительных материалов столицы. Здесь представлен наиболее широкий ассортимент товаров для ремонта по сравнению с крупнейшими строительными гипермаркетами, и множество из них вы сможете купить с очень существенной скидкой — до 50%!</p>
 </div>
 
@@ -56,7 +56,7 @@
                 </a>
             </p>
 
-            <p>Стать участником программы «Новосел» могут клиенты <nobr>ИНКОМ-Недвижимость</nobr> при покупке объекта (либо: квартиры, загородного жилья или участка). Приобретая недвижимость на рынке вторичного и загородного жилья, они получают программную папку, в которой содержится дисконтная карта «Новосел», а также каталог с полной информацией о магазинах торгового комплекса «Каширский Двор», предоставляющих скидки.<br>
+            <p>Стать участником программы «Новосел» могут клиенты <nobr>ЗемНедвижимость</nobr> при покупке объекта (либо: квартиры, загородного жилья или участка). Приобретая недвижимость на рынке вторичного и загородного жилья, они получают программную папку, в которой содержится дисконтная карта «Новосел», а также каталог с полной информацией о магазинах торгового комплекса «Каширский Двор», предоставляющих скидки.<br>
             Перед началом покупок дисконтную карту «Новосел» необходимо активировать на сайте нашего партнера www.kdvor.ru/novosel.</p>
 
             <p class="text--center">
