--- a/views/nedvizhimost.html
+++ b/views/nedvizhimost.html
@@ -6,7 +6,7 @@
 
     <div class="panel margin--top-large">
         <h1 class="text--h1">Недвижимость Москвы и Подмосковья</h1>
-        <p>По оценкам экспертов, значительная часть организованных сделок в московском регионе приходится именно на ИНКОМ, что позволяет нам вот уже многие годы занимать лидирующее место среди агентств недвижимости Москвы и Подмосковья.</p>
+        <p>По оценкам экспертов, значительная часть организованных сделок в московском регионе приходится именно на ЗемНедвижимость, что позволяет нам вот уже многие годы занимать лидирующее место среди агентств недвижимости Москвы и Подмосковья.</p>
         <p>Мы уже более 20 лет предоставляем риэлторские услуги юридическим и физическим лицам в ключевых сегментах рынка недвижимости: покупка и продажа квартир на первичном и вторичном рынках городского и загородного жилья, аренда квартир, а также проводим сделки с коммерческой недвижимостью.</p>
     </div>
 
@@ -16,7 +16,7 @@
             <i></i>
         </div>
         <p>
-            ИНКОМ-Недвижимость уверенно занимает ведущие позиции на рынке риэлторских услуг. Мы оказываем полный спектр услуг на всех этапах покупки квартир и комнат.
+            ЗемНедвижимость уверенно занимает ведущие позиции на рынке риэлторских услуг. Мы оказываем полный спектр услуг на всех этапах покупки квартир и комнат.
         </p>
     </div>
 
@@ -24,7 +24,7 @@
 
     <div class="panel">
         <h1 class="text--h1">Широкий выбор жилья любой категории в Москве и Подмосковье</h1>
-        <p>Компания «ИНКОМ-Недвижимость» работает на рынке недвижимости с 1991 года. За эти годы нами накоплен значительный опыт по проведению сделок на вторичном рынке жилья в Москве и Московской области. Мы оказываем полный спектр услуг на всех этапах покупки квартир и комнат. За ходом сделки будут следить лицензированные профессионалы с большим опытом, имеющие высшее образование и специальную подготовку, которые за годы работы в Компании помогли тысячам семей решить жилищные проблемы.</p>
+        <p>Компания «ЗемНедвижимость» работает на рынке недвижимости с 1991 года. За эти годы нами накоплен значительный опыт по проведению сделок на вторичном рынке жилья в Москве и Московской области. Мы оказываем полный спектр услуг на всех этапах покупки квартир и комнат. За ходом сделки будут следить лицензированные профессионалы с большим опытом, имеющие высшее образование и специальную подготовку, которые за годы работы в Компании помогли тысячам семей решить жилищные проблемы.</p>
         <p>Наши эксперты проведут для вас бесплатную консультацию, расскажут обо всех этапах покупки квартиры или комнаты, подберут варианты тех квартир, которые соответствуют вашим требованиям и запросам, а также организуют их просмотр. Специалисты Компании проведут проверку юридической чистоты квартиры или комнаты, соберут и подготовят все необходимые документы для проведения сделки, предложат подходящую для вас ипотечную программу.</p>
     </div>
 
