--- a/views/uslugi/pokupka-kvartir-v-novostroykakh.html
+++ b/views/uslugi/pokupka-kvartir-v-novostroykakh.html
@@ -6,7 +6,7 @@
 
     <h1 class="margin--bottom-large">Недвижимость в новостройках</h1>
 
-    <p>Если Вы решили приобрести квартиру в новостройке, эксперты Департамента новостроек компании ИНКОМ-Недвижимость подберут для Вас вариант, отвечающий необходимым требованиям, займутся сопровождением сделки на всех этапах и помогут оформить ее в соответствии с законодательством РФ.</p>
+    <p>Если Вы решили приобрести квартиру в новостройке, эксперты Департамента новостроек компании ЗемНедвижимость подберут для Вас вариант, отвечающий необходимым требованиям, займутся сопровождением сделки на всех этапах и помогут оформить ее в соответствии с законодательством РФ.</p>
     <p>Корпоративным клиентам Департамента новостроек доступен полный спектр услуг в области реализации объектов первичного рынка: консультации по самым разным вопросам, привлечение кредитных организаций, проведение рекламных кампаний любого охвата и любой степени сложности.</p>
 
     <ul class="grid grid--small text--center">
